adding argument to open_track

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-<<<<<<< HEAD
-dataset
-.vscode
-=======
 dataset/harmonica_dataset
 dataset/harmonica_note_test_dataset
 dataset/harmonica_test
-dataset/harmonica_track
+dataset/record
 .vscode
 model
->>>>>>> 6789b8d695be03539abd3064bdb9efd70bf530da
