--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-wavesurfer": "^0.8.6",
-    "wavesurfer.js": "^3.3.1"
+    "wavesurfer.js": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/wavesurfer.js": "^3.2.0"
   }
 }
